<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="setting_play"
        app:title="@string/way">

        <SwitchPreferenceCompat
            app:key="random"
            app:title="@string/message_random" />

        <SwitchPreferenceCompat
            app:key="reverse"
            app:summary="@string/summary_setting_reverse_answer"
            app:title="@string/message_switch_question" />

        <SwitchPreferenceCompat
            app:key="refine"
            app:title="@string/message_wrong_only" />

        <SwitchPreferenceCompat
            app:key="manual"
            app:summary="@string/summary_setting_reverse_answer"
            app:title="@string/message_self" />

        <SwitchPreferenceCompat
            app:key="alwaysReview"
            app:title="@string/always_review" />

        <SwitchPreferenceCompat
            app:key="audio"
            app:title="@string/setting_sound" />

        <SwitchPreferenceCompat
            app:key="show_setting_dialog"
            app:title="@string/setting_show_dialog"
            app:summary="@string/setting_show_setting_dialog" />

        <ListPreference
            app:key="play_font_size"
            app:title="@string/play_font_size"
            app:entries="@array/play_font_size"
            app:entryValues="@array/play_font_size_values" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="preference_group_study_plus"
        app:title="@string/preference_group_study_plus">

        <Preference
            app:key="setting_study_plus"
            app:title="@string/preference_study_plus" />

        <ListPreference
            app:key="study_plus"
            app:title="@string/preference_post_study_plus"
            app:entries="@array/upload_setting_study_plus"
            app:entryValues="@array/upload_setting_study_plus_values"
            app:isPreferenceVisible="false"/>


    </PreferenceCategory>

    <PreferenceCategory
        app:key="setting_other"
        app:title="@string/preference_group_other">

        <Preference
            app:key="other_apps"
            app:title="@string/action_other">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/developer?id=ke-ta" />
        </Preference>

        <Preference
            app:key="license"
            app:title="@string/action_license">
        </Preference>

        <Preference
            app:key="version"
            app:title="@string/version_app">
        </Preference>

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>