<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/title_page_home"/>
    <item
        android:id="@+id/page_search"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_page_search"/>
    <item
        android:id="@+id/page_group"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_group_24"
        android:title="@string/title_page_group"/>
    <item
        android:id="@+id/page_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings_white"
        android:title="@string/title_page_settings"/>

</menu>