<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/page_home">

    <action
        android:id="@+id/action_global_page_home"
        app:destination="@id/page_home" />

    <action
        android:id="@+id/action_global_page_group"
        app:destination="@id/page_group" />

    <fragment
        android:id="@id/page_home"
        android:name="jp.gr.java_conf.foobar.testmaker.service.view.main.HomeFragment"
        android:label="@string/app_name" >

        <action
            android:id="@+id/action_home_to_list_question"
            app:destination="@id/page_list_question"
            app:enterAnim="@anim/alpha_appear"
            app:exitAnim="@anim/alpha_gone"
            app:popEnterAnim="@anim/alpha_appear"
            app:popExitAnim="@anim/alpha_gone" />

        <action
            android:id="@+id/action_home_to_create_workbook"
            app:destination="@id/page_create_workbook"
            app:enterAnim="@anim/alpha_appear"
            app:exitAnim="@anim/alpha_gone"
            app:popEnterAnim="@anim/alpha_appear"
            app:popExitAnim="@anim/alpha_gone" />

    </fragment>

    <fragment
        android:id="@+id/page_list_question"
        android:name="jp.gr.java_conf.foobar.testmaker.service.view.edit.QuestionListFragment"
        android:label="@string/fragment_list_question" >

        <argument
            android:name="workbookId"
            app:argType="long" />

        <action
            android:id="@+id/action_question_list_to_edit_workbook"
            app:destination="@id/page_edit_workbook"
            app:enterAnim="@anim/alpha_appear"
            app:exitAnim="@anim/alpha_gone"
            app:popEnterAnim="@anim/alpha_appear"
            app:popExitAnim="@anim/alpha_gone" />
    </fragment>

    <fragment
        android:id="@+id/page_edit_workbook"
        android:name="jp.gr.java_conf.foobar.testmaker.service.view.workbook.EditWorkbookFragment"
        android:label="@string/fragment_edit_workbook" >

        <argument
            android:name="workbookId"
            app:argType="long" />

        <action
            android:id="@+id/action_edit_workbook_to_create_folder"
            app:destination="@id/page_create_folder"
            app:enterAnim="@anim/alpha_appear"
            app:exitAnim="@anim/alpha_gone"
            app:popEnterAnim="@anim/alpha_appear"
            app:popExitAnim="@anim/alpha_gone" />

    </fragment>

    <fragment
        android:id="@+id/page_create_workbook"
        android:name="jp.gr.java_conf.foobar.testmaker.service.view.workbook.CreateWorkbookFragment"
        android:label="@string/fragment_create_workbook" >

        <action
            android:id="@+id/action_create_workbook_to_create_folder"
            app:destination="@id/page_create_folder"
            app:enterAnim="@anim/alpha_appear"
            app:exitAnim="@anim/alpha_gone"
            app:popEnterAnim="@anim/alpha_appear"
            app:popExitAnim="@anim/alpha_gone" />

    </fragment>

    <fragment
        android:id="@+id/page_create_folder"
        android:name="jp.gr.java_conf.foobar.testmaker.service.view.category.CreateFolderFragment"
        android:label="@string/fragment_create_folder" />

    <fragment
        android:id="@id/page_search"
        android:name="jp.gr.java_conf.foobar.testmaker.service.view.online.PublishedWorkbookListFragment"
        android:label="@string/title_activity_public_tests"
        tools:layout="@layout/fragment_group_list" />

<!--    <fragment-->
<!--        android:id="@id/page_group"-->
<!--        android:name="jp.gr.java_conf.foobar.testmaker.service.view.group.GroupContainerFragment"-->
<!--        android:label="@string/title_page_group"-->
<!--        tools:layout="@layout/fragment_group_list" />-->

    <fragment
        android:id="@id/page_group"
        android:name="jp.gr.java_conf.foobar.testmaker.service.view.group.GroupListFragment"
        android:label="@string/group_list_fragment_label"
        tools:layout="@layout/fragment_group_list">

        <action
            android:id="@+id/action_group_list_to_group_detail"
            app:destination="@id/fragment_group_detail" />
    </fragment>
    <fragment
        android:id="@+id/fragment_group_detail"
        android:name="jp.gr.java_conf.foobar.testmaker.service.view.group.GroupDetailFragment"
        android:label="@string/group_detail_fragment_label"
        tools:layout="@layout/fragment_group_detail">

        <argument
            android:name="groupId"
            app:argType="string"
            android:defaultValue="" />

        <action
            android:id="@+id/action_group_detail_to_upload_test"
            app:destination="@id/fragment_upload_group_test" />

        <action
            android:id="@+id/action_group_detail_to_history_test"
            app:destination="@id/fragment_history_test" />

    </fragment>
    <fragment
        android:id="@+id/fragment_upload_group_test"
        android:name="jp.gr.java_conf.foobar.testmaker.service.view.group.UploadGroupTestFragment"
        android:label="@string/upload_group_test_fragment_label"
        tools:layout="@layout/fragment_upload_group_test">

        <argument
            android:name="groupId"
            app:argType="string"
            android:defaultValue="" />

    </fragment>
    <fragment
        android:id="@+id/fragment_history_test"
        android:name="jp.gr.java_conf.foobar.testmaker.service.view.group.HistoryTestFragment"
        android:label="@string/history_test_fragment_label"
        tools:layout="@layout/fragment_group_detail">

        <argument
            android:name="documentId"
            app:argType="string"
            android:defaultValue="" />

    </fragment>


    <fragment
        android:id="@id/page_settings"
        android:name="jp.gr.java_conf.foobar.testmaker.service.view.preference.SettingsContainerFragment"
        android:label="@string/title_page_settings"
        tools:layout="@layout/fragment_group_list" />

</navigation>